got the layout better and created an extra html link section for instructions on how to play the game

--- a/index.html
+++ b/index.html
@@ -67,14 +67,7 @@ Stretch Goals:
 
     
     <div id="links">
-        <button id="aboutTheGame">About the Game (open the console)</button>
-<p id="AdditionalLinks">Additional Links for instructions</p> 
-        <ul>Helpful Links</ul>
-        <li><a href="https://www.wikihow.com/Play-Baccarat">wikihow</a></li>    
-        <li><a href="/Assets/BaccaratCardValues.png">What are Baccarat Card Values?</a></li>
-        <li><a href=="/Assets/Naturals.png">What are Naturals?</li>
-        <li><a href="https://youtu.be/gUbBEnDrPiU">YouTube video player</a></li>
-    </div>
+        <button id="aboutTheGame">About the Game (open the console)<a href="./AboutTheGame.html"></a></button>
 
 </body>
 </html>
