Added in separate About the Game HTML Page so the game page looks cleaner than before

--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@ Stretch Goals:
         <button>Deal</button>
         <button>Clear All</button>
     </div>
-
-    
     <div id="links">
-        <button id="aboutTheGame">About the Game (open the console)<a href="./AboutTheGame.html"></a></button>
-
+            <!-- <a href="./AboutTheGame.html">About the Game</a></button> -->
+<input type="button" onclick="location.href='./AboutTheGame.html';" value="About the Game" />
 </body>
 </html>
