--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="card.js"></script>
     <script src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <script defer src="allocateWager.js"></script>
     <title>Slam's Baccarat</title>
 <div id="decoration">
     <h1 class="casinoName">
@@ -24,16 +25,24 @@
 </head>
 <body>
 <div id="container">
-<div id="right">Banker</div>
-<div id="left">Player</div>
+
+<div id="right">Player
+    <div id="playerBet"></div>
+</div>
+<div id="left">Banker
+    <div id="bankerBet"></div>
+</div>
 <div id="mid">Payouts
+<div id="tieBet"></div>
+
+
         <div id="bettingAmounts">
         <button id="white"><img src="assets/White.jpg" alt="White $1"></button>
         <button id="blue"><img src="assets/Blue.jpg" alt="Blue $5"></button>
         <button id="green"><img src="assets/Green.jpg" alt="Green $25"></button>
         <button id="red"><img src="assets/Red.jpg" alt="Red $50"></button>
         <button id="black"><img src="assets/Black.jpg" alt="Black $100"></button>
-    <label for="amountWager">Amount Wagered:</label> <input type="int" id="firstname">
+    <label for="amountWage">Amount Wagered:</label> <input type="number" id="amountwagered" value="0">
     </div>
 </div>
 
