Removed misc files

--- a/AboutTheGame.html
+++ b/AboutTheGame.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Baccarat Information</title>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
+        <div id="decoration">
+        <h1 class="casinoName">
+            <span style="color:black">&spades;</span>
+            <span style="color:red">&hearts;</span>
+            <span style="color:black"> &clubs;</span>
+            <span style="color:red"> &diams;</span>
+            <span style="color:black"> Baccarat Sim</span>
+            <span style="color:black">&spades;</span>
+            <span style="color:red">&hearts;</span>
+            <span style="color:black"> &clubs;</span>
+            <span style="color:red"> &diams;</span>
+        </h1>
+        </div>
     <p id="AdditionalLinks">Additional Links for instructions</p> 
         <ul>Helpful Links</ul>
         <li><a href="https://www.wikihow.com/Play-Baccarat">wikihow</a></li>    
         <li><img src="/Assets/BaccaratCardValues.png" alt="What are Baccarat Card Values"></li>
         <li><img src="/Assets/Naturals.png" alt="What are Naturals?""></li>
-        <li><a href="https://youtu.be/gUbBEnDrPiU">YouTube video player</a></li>
+        <li><<iframe width="560" height="315" src="https://www.youtube.com/embed/gUbBEnDrPiU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 </body>
 </html>
