Fixed the buttons since it wasn't working on the github pages

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <div id="playerCard"></div>
     <div id="playerValueIndicator"></div>
 </div>
+
 <div id="left">Banker
     <div id="bankerBet"></div>
     <div id="bankerCard"></div>
@@ -47,11 +48,11 @@
 
 
         <div id="bettingAmounts">
-        <button id="white"><img src="assets/White.jpg" alt="White $1"></button>
-        <button id="blue"><img src="assets/Blue.jpg" alt="Blue $5"></button>
-        <button id="green"><img src="assets/Green.jpg" alt="Green $25"></button>
-        <button id="red"><img src="assets/Red.jpg" alt="Red $50"></button>
-        <button id="black"><img src="assets/Black.jpg" alt="Black $100"></button>
+        <button id="white"><img src="Assets/White.jpg" alt="White $1"></button>
+        <button id="blue"><img src="Assets/Blue.jpg" alt="Blue $5"></button>
+        <button id="green"><img src="Assets/Green.jpg" alt="Green $25"></button>
+        <button id="red"><img src="Assets/Red.jpg" alt="Red $50"></button>
+        <button id="black"><img src="Assets/Black.jpg" alt="Black $100"></button>
         <label for="amountWage">Amount Wagered:</label> <input type="number" id="amountwagered" value="0">
         </div>
 </div>
