--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="card.js"></script>
     <script src="index.js" defer></script>
     <script defer src="allocateWager.js"></script>
     <script defer src="assetmanagerCopy.js"></script>
@@ -45,7 +44,7 @@
 </div>
 <div id="mid">Payouts<p id="scoreComparison"></p><div></div>
 <div id="tieBet">xx</div>
-
+<div id="winner"></div>
 
         <div id="bettingAmounts">
         <button id="white"><img src="Assets/White.jpg" alt="White $1"></button>
