working out the last bugs and finishing touches

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         </div>
 <div id="container">
 
-<div id="left">Player
+<div id="left">
+    <div>Player</div>
     <div id="playerBet"></div>
     <div id="playerCard"></div>
     <div id="playerValueIndicator"></div>
@@ -42,14 +43,16 @@
     <div id="playerValueIndicator"></div>
 </div> -->
 
-<div id="right">Banker
+<div id="right"><div>Banker</div>
     <div id="bankerBet"></div>
     <div id="bankerCard"></div>
     <div id="bankerValueIndicator"></div>
 </div>
-<div id="mid">Payouts<p id="scoreComparison"></p><div></div>
-<div id="tieBet">xx</div>
-<div id="winner"></div>
+<div id="mid"><div id="payout">Payouts
+
+</div><p id="scoreComparison"></p><div></div>
+<div id="tieBet"></div>
+<div id="winner">Who Wins? </div>
 
         <div id="bettingAmounts">
         <button id="white"><img src="Assets/White.jpg" alt="White $1"></button>
