Slight issue with the github page and trying to update List Items in the additional links

--- a/AboutTheGame.html
+++ b/AboutTheGame.html
@@ -25,7 +25,7 @@
         <ul>Helpful Links</ul>
         <li><a href="https://www.wikihow.com/Play-Baccarat">wikihow</a></li>    
         <li><img src="/Assets/BaccaratCardValues.png" alt="What are Baccarat Card Values"></li>
-        <li><img src="/Assets/Naturals.png" alt="What are Naturals?""></li>
-        <li><<iframe width="560" height="315" src="https://www.youtube.com/embed/gUbBEnDrPiU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
+        <li><img src="/Assets/Naturals.png" alt="What are Naturals?"></li>
+        <li><iframe width="560" height="315" src="https://www.youtube.com/embed/gUbBEnDrPiU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></li>
 </body>
 </html>
