Fixed the deal function!

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ gameResults.remove(z);
 </script>
 
 </button>
-<!-- This should invoke a shuffling noise to help the gambler experience a shuffling noise.  -->
+<!-- This is an inline javascript for the shuffle function. This should invoke a shuffling noise to help the gambler experience a shuffling noise.  -->
         <button id="deal">Deal</button>
         <button id="clearAll">Clear All</button>
         <div id="links">
