Gotten rid of the clear all button for the time being

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ gameResults.remove(z);
 </button>
 <!-- This is an inline javascript for the shuffle function. This should invoke a shuffling noise to help the gambler experience a shuffling noise.  -->
         <button id="deal">Deal</button>
-        <button id="clearAll">Clear All</button>
+        <!-- <button id="clearAll">Clear All</button> -->
         <div id="links">
             <!-- <a href="./AboutTheGame.html">About the Game</a></button> -->
             <input type="button" onclick="location.href='./AboutTheGame.html';" value="About the Game" />
