--- a/HTML Folder/index.html
+++ b/HTML Folder/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="index.js" defer></script>
-    <script defer src="allocateWager.js"></script>
-    <script defer src="assetmanagerCopy.js"></script>
+    <script src="/Javasript Folder/index.js" defer></script>
+    <script defer src="/Javasript Folder/allocateWager.js"></script>
+    <script defer src="/Javasript Folder/assetmanagerCopy.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script
   src="https://code.jquery.com/jquery-3.6.1.js"
@@ -22,7 +22,7 @@
             <span style="color:red">&hearts;</span>
             <span style="color:black"> &clubs;</span>
             <span style="color:red"> &diams;</span>
-            <span style="color:black"> Baccarat Sim</span>
+            <span style="color:white"> Slam's Baccarat</span>
             <span style="color:black">&spades;</span>
             <span style="color:red">&hearts;</span>
             <span style="color:black"> &clubs;</span>
