--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/Javasript Folder/index.js" defer></script>
-    <script defer src="/Javasript Folder/allocateWager.js"></script>
-    <script defer src="/Javasript Folder/assetmanagerCopy.js"></script>
+    <script src="index.js" defer></script>
+    <script defer src="/allocateWager.js"></script>
+    <script defer src="assetmanagerCopy.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script
   src="https://code.jquery.com/jquery-3.6.1.js"
