functional refactor plus minor debugs

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ buttons.addEventListener("click",function(){
     okprompt.remove();
     dealbtn.disabled = false;
 audio.play();
-gameResults.remove(z);
+// gameResults.remove(z);
 });
 </script>
 
